<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.igorkorovchenko.smileme.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/background_imageview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.8"
            android:contentDescription="@string/background_imageview"
            android:scaleType="centerCrop"
            android:src="@drawable/just_smile" />

        <ImageButton
            android:id="@+id/location_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/location_button_text"
            android:scaleType="centerCrop"
            android:src="@drawable/location" />

        <ImageButton
            android:id="@+id/schedule_consultation_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/location_button"
            android:layout_margin="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/schedule_consultation_button_text"
            android:scaleType="centerCrop"
            android:src="@drawable/calendar" />

        <ImageButton
            android:id="@+id/phone_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/schedule_consultation_button"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/schedule_consultation_button_text"
            android:scaleType="centerCrop"
            android:src="@drawable/smartphone" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/about_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:text="@string/company_name"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_us"
            android:fontFamily="sans-serif"
            android:paddingBottom="20dp"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:scrollbars="vertical"
            android:text="@string/about_us_text"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:padding="16dp"
            android:text="@string/operation_hours"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </RelativeLayout>

</android.widget.LinearLayout>
